# SO2-GAME

./: CMakeCache.txt  CMakeLists.txt  Makefile  board.c  board.h  client.c  clientMain.c  cmake_install.cmake  main.c  map.txt  server.c  server.h
headers/: beast.h  board.h  client.h  player.h  point.h  server.h
src/: beast.c  board.c  client.c  player.c  point.c  server.c
